# yapc

./: .gitattributes  Cargo.toml  README.MD
.github/workflows/: build-and-release.yml  test.yml
src/: lib.rs  main.rs
src/assets/: bash-preexec.sh  shell-hook
src/send/: mod.rs
src/shell_done/: mod.rs
src/shell_integration/: mod.rs
