[package]
name = "rspo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
config = "0.14.0"
home = "0.5.9"
pushover-rs = "0.3.15"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
tokio = { version = "1.36.0", features = ["full"] }
